@@ -112,6 +112,7 @@ All (GUI):
 - Add support for style="page-break-inside:avoid" to <div> in wxHTML.
 - Support strike-through in wxDataViewItem attributes (approach, Igor Korot).
 - Allow distinguishing between user- and script-opened windows in wxWebView.
+- Allow binding to events generated by their items in submenus too.
 
 wxGTK:
 
